<resources>
    <string name="app_name">Ask For Help</string>
    <string name="link_to_github">
        <a href="https://github.com/broakenmedia/MultiContactPicker">MultiContactPicker by BrokenMedia</a>
    </string>
    <string name="view_license">View Apache License</string>
    <string name="shared_pref_error">There was an error getting shared preferences. Please close the app and restart it.</string>
    <string name="reset_app_choice">We cleared your preferences for which app to send the text with. Next time you send a text, please select which app to use when the prompt comes up.</string>
    <string name="location_access_needed">You cannot turn on location services right now because we do not have access to your phone\'s location. Would you like to give us access?</string>
    <string name="location_off_warning">Turning off location here will stop the app from sending a link to your location but will not rescind the app\'s permission to access it. If you don\'t want the app to be able to access your location anymore, go to your phone\'s settings app and change the permissions there.</string>
    <string name="contact_access_needed">This app is useless without access to your contacts. Please give us permission to read your contacts.</string>
    <string name="gps_access_needed">This app needs the GPS services to be enabled in order to send your location. Please enable it on the Location Services screen.</string>
    <string name="set_contacts_header">Set Contacts and Numbers</string>
    <string name="set_requests_header">Set Request Texts</string>
    <string name="enter_new_contact_group">Enter new contact group name</string>
    <string name="save_new_contact_group">Save new contact group</string>
    <string name="choose_contacts_header">Choose a group to message</string>
    <string name="choose_requests_header">Choose a message to send</string>
    <string name="enter_new_request">Enter new request text</string>
    <string name="save_new_request">Save new request text</string>
    <string name="keyboard_save">Save</string>
    <string name="set_requests">Set Requests</string>
    <string name="set_contacts_and_groups">Set Contact Groups and Numbers</string>
    <string name="restart_tutorial">Restart tutorial</string>
    <string name="location_off_on">Location Off/On</string>
    <string name="about">About</string>
    <string name="reset_default_app_choice">Reset default app choice</string>
    <string name="settings">Settings</string>
    <string name="location_on">on</string>
    <string name="location_off">off</string>
    <string name="blank_request">Enter Request Text Below</string>
    <string name="blank_contact_group">Click to select contacts for Group</string>
    <string name="about_text">This app is a streamlined messaging app. It is not meant to be used instead of 911. \n This app uses code from an outside library te select multiple contacts in the settings page. The library we used, MultiContactPicker, is licensed under the Apache License 2.0. Here is the link to the github repository of the code we used:</string>
    <string name="delete">Delete</string>

    <string name="request">The Message Titled </string>
    <string name="contact_group"> The Contact Group Titled </string>

    <string name="request_group">Request Group</string>
    <string name="is_being_deleted">is being deleted from </string>
    <string name="delete_request">This is an empty request. Scroll down to text box to populate with a new request.</string>
    <string name="delete_contact">This is an empty contact. Scroll down to text box to populate with a new contact. </string>
    <string name="delete_button">There is nothing to delete. Scroll down to text box to create a new element</string>
    <string name="select_empty_contact">This is an empty contact view. Go to settings to populate this view</string>
    <string name="select_empty_request">This is an empty request view. Go to settings to populate this view</string>

    <string name="message">Message </string>
    <string name="contact">Contact Group </string>
    <string name="error">You must enter a message in order to save it</string>
    <string name="error_contact">Cannot save without a new contact group name</string>
    <string name="new_contact">The new contact group</string>
    <string name="new_message">The new message</string>
    <string name="created">has been created in</string>
    <string name="empty_messages">Choose a Message to Send. There are currently no saved messages to send</string>
    <string name="empty_change_messages">Set Requests. There are currently no saved requests</string>
    <string name="empty_contacts">Choose a Group to Message. There are currently no contact groups to choose from</string>
    <string name="empty_change_contacts">Set Contact Groups and Numbers. There are currently no saved contact groups</string>
    <string name="selected_contacts"> has been selected as your contacts group</string>
    <string name="selected_response"> has been selected as your message </string>
    <string name="full_messages">Set Request Texts. There is currently no more room for new messages</string>
    <string name="full_contacts">Set Contacts and Numbers. There is currently no more room for new contact groups</string>
</resources>
